infra/observability/monitoring_httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-httproute
  namespace: monitoring
  labels:
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/component: gateway-route
    app.kubernetes.io/managed-by: kubectl
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - monitoring.juice-shop.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: monitoring-grafana
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      backendRefs:
        - name: prometheus-operated
          port: 9090
    - matches:
        - path:
            type: PathPrefix
            value: /alertmanager
      backendRefs:
        - name: alertmanager-operated
          port: 9093
